--- a/components/Header/header.module.css
+++ b/components/Header/header.module.css
@@ -1,6 +1,199 @@
 .header {
+    position: relative;
     margin-top: 40px;
-    height: 200px;
+    height: 96px;
     width: 100%;
-    background-color: red;
+    padding-left: 55px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-family: 'Barlow Condensed', sans-serif;
+    overflow: hidden;
+}
+
+.nav {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 59.928%;
+    padding-right: 4.144%;
+    font-size: 16px;
+}
+
+.nav::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-color: rgba(255, 255, 255, .04);
+    backdrop-filter: blur(81.55px);
+}
+
+.logo {
+    position: relative;
+}
+
+.spacer {
+    left: 11.598%;
+    position: absolute;
+    background-color: white;
+    height: 1px;
+    opacity: 25.15%;
+    width: 32.848%;
+}
+
+.nav>a {
+    text-transform: uppercase;
+    color: white;
+    text-decoration: none;
+    margin-left: 6.52%;
+    letter-spacing: 2.7px;
+    position: relative;
+    transform: .3s;
+}
+
+.nav>a:first-child {
+    margin-left: 0px;
+}
+
+.nav>a::after {
+    content: "";
+    position: absolute;
+    bottom: -37px;
+    left: 0;
+    width: 100%;
+    height: 3px;
+    background-color: white;
+    opacity: 0;
+    transition: opacity .3s;
+}
+
+.nav__indicator {
+    position: absolute;
+    left: 0;
+    bottom: 3px;
+    transition: .4s;
+    height: 3px;
+    width: 50px;
+    z-index: 1;
+    background-color: white;
+}
+
+.nav>a:not(.is-active):hover::after {
+    opacity: 50.21%;
+}
+
+.is__active {}
+
+.nav>a>span {
+    margin-right: 12px;
+    font-weight: bold;
+}
+
+.hamburger__handler {
+    display: none;
+    position: relative;
+    padding: 0;
+    background-color: transparent;
+    border: none;
+    padding-bottom: 5px;
+    width: 23px;
+    height: 21px;
+}
+
+.hamburger__handler>div {
+    position: absolute;
+    opacity: 0;
+    transition: visibility 0s, opacity 0.25s ease;
+}
+
+/* tablet */
+
+@media screen and (max-width: 1082px) {
+    .nav {
+        font-size: 14px;
+        padding-right: 0;
+        width: 450px;
+        justify-content: space-evenly;
+    }
+    .nav>a>span {
+        display: none;
+    }
+    .nav>a {
+        margin-left: 0;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .header {
+        padding-left: 39px;
+        margin-top: 0px;
+    }
+    .spacer {
+        display: none;
+    }
+}
+
+/* mobile */
+
+@media screen and (max-width: 546px) {
+    .header {
+        padding-left: 24px;
+    }
+    .logo {
+        min-width: 40px !important;
+        min-height: 40px !important;
+    }
+    .nav {
+        width: 340px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .header {
+        padding-right: 24px;
+        overflow: visible;
+    }
+    .nav {
+        position: fixed;
+        right: 0;
+        top: 0;
+        flex-direction: column;
+        align-items: left;
+        width: 67.734%;
+        height: 100vh;
+        z-index: 1;
+        justify-content: flex-start;
+        font-size: 16px;
+        transition: transform .3s ease;
+    }
+    .nav>a {
+        margin-top: 32px;
+        width: 100%;
+        padding-left: 32px;
+    }
+    .nav>a:first-child {
+        margin-top: 118px;
+    }
+    .nav>a>span {
+        display: inline-block;
+        margin-right: 11px;
+    }
+    .hamburger__handler {
+        display: block;
+        z-index: 2;
+    }
+    .nav>a::after {
+        display: none;
+    }
+    .nav__indicator {
+        left: inherit;
+        right: 0;
+        width: 4px;
+        height: 31px;
+    }
 }
