--- a/components/Header/header.module.css
+++ b/components/Header/header.module.css
@@ -49,7 +49,6 @@
 .nav>a {
     text-transform: uppercase;
     color: white;
-    text-decoration: none;
     margin-left: 6.52%;
     letter-spacing: 2.7px;
     position: relative;
@@ -162,6 +161,7 @@
         position: fixed;
         right: 0;
         top: 0;
+        transform: translate3d(100%, 0, 0);
         flex-direction: column;
         align-items: left;
         width: 67.734%;
