--- a/pagesStyles/home.module.css
+++ b/pagesStyles/home.module.css
@@ -6,9 +6,20 @@
     flex-wrap: wrap;
 }
 
+.main__background {
+    top: 0;
+    left: 0;
+    z-index: -2;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background-image: url("/assets/home/background-home-desktop.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .container__left, .container__right {
     flex: 1;
-    background-color: red;
 }
 
 .container__left>h1 {
@@ -38,12 +49,9 @@
     line-height: 32px;
 }
 
-/*  */
-
 .container__right {
     display: flex;
     justify-content: flex-end;
-    background-color: blue;
 }
 
 .container__right__button {
@@ -79,6 +87,9 @@
 }
 
 @media screen and (max-width: 1072px) {
+    .main__background {
+        background-image: url("/assets/home/background-home-tablet.jpg");
+    }
     .container__right__button {
         width: 242px;
         height: 242px;
@@ -111,6 +122,9 @@
 }
 
 @media screen and (max-width: 480px) {
+    .main__background {
+        background-image: url("/assets/home/background-home-mobile.jpg");
+    }
     .container__right {
         margin-top: 81px;
     }
@@ -125,12 +139,16 @@
     }
     .container__left>h1 {
         font-size: 16px;
+        letter-spacing: 2.7px;
     }
     .container__left>h1>span {
         font-size: 80px;
+        margin-top: 16px;
     }
     .container__left>p {
+        margin-top: 16px;
         max-width: 327px;
         font-size: 15px;
+        line-height: 25px;
     }
 }
