--- a/pagesStyles/destination.module.css
+++ b/pagesStyles/destination.module.css
@@ -45,6 +45,19 @@
     display: flex;
     transition: opacity .5s;
     margin-left: 38px;
+    position: relative;
+    width: 445px;
+    height: 445px;
+    display: flex;
+    justify-content: center;
+}
+
+.opacity__0 {
+    opacity: 0;
+}
+
+.heading__image__handler>div {
+    position: absolute !important;
 }
 
 .content__right {
@@ -177,7 +190,7 @@
         margin-bottom: 53px;
         margin-left: 0;
     }
-    .heading__image__handler>div {
+    .heading__image__handler>div, .heading__image__handler {
         width: 300px;
         height: 300px;
     }
@@ -222,7 +235,7 @@
         margin-top: 51px;
         margin-bottom: 26px;
     }
-    .heading__image__handler>div {
+    .heading__image__handler>div, .heading__image__handler {
         width: 170px;
         height: 170px;
     }
