--- a/components/Header/header.module.css
+++ b/components/Header/header.module.css
@@ -190,6 +190,8 @@
         display: block;
         z-index: 2;
         padding-bottom: 20px;
+        position: fixed;
+        right: 24px;
     }
     .nav>a::after {
         display: none;
